<resources>
    <string name="a">Navigate home</string>
    <string name="b">%1$s, %2$s</string>
    <string name="c">%1$s, %2$s, %3$s</string>
    <string name="d">Navigate up</string>
    <string name="e">More options</string>
    <string name="f">Done</string>
    <string name="g">See all</string>
    <string name="h">Choose an app</string>
    <string name="i">OFF</string>
    <string name="j">ON</string>
    <string name="k">Search…</string>
    <string name="l">Clear query</string>
    <string name="m">Search query</string>
    <string name="n">Search</string>
    <string name="o">Submit query</string>
    <string name="p">Voice search</string>
    <string name="q">Share with</string>
    <string name="r">Share with %s</string>
    <string name="s">Collapse</string>
    <string name="t">Search</string>
    <string name="u">999+</string>
    <string name="v">AR功能出了点小问题，请检查相机权限再试</string>
    <string name="w">音乐闹钟</string>
    <string name="x">重复</string>
    <string name="y">歌单达到%1$d个上限，剩余歌单导入失败</string>
    <string name="z">导入失败</string>
    <string name="a0">已导入%1$d个歌单</string>
    <string name="a1">导入歌单失败，请稍后重试。</string>
    <string name="a2">网络连接失败，请稍后重试。</string>
    <string name="a3">导入成功</string>
    <string name="a4">性能监控</string>
    <string name="a5">耳机线控切歌</string>
    <string name="a6">"操作说明（线控中间按钮）
单击：播放/暂停； 双击：下一首； 三击：上一首；"</string>
    <string name="a7">全部</string>
    <string name="a8">网易出品</string>
    <string name="a9">网易独家</string>
    <string name="a_">最新</string>
    <string name="aa">地区</string>
    <string name="ab">排序</string>
    <string name="ac">类型</string>
    <string name="ae">MB</string>
    <string name="af">《网易云音乐社区管理细则》</string>
    <string name="ag">《网易云音乐服务条款》</string>
    <string name="ah">自动</string>
    <string name="ai">较高</string>
    <string name="aj">极高</string>
    <string name="ak">无损品质</string>
    <string name="al">标准</string>
    <string name="am">电台被订阅</string>
    <string name="an">什么是精品歌单</string>
    <string name="ao">关于我</string>
    <string name="ap">另有网页版，PC客户端，iPhone客户端多端同步，音乐随身听。详情访问：music.163.com</string>
    <string name="aq">帐号和绑定设置</string>
    <string name="as">帐号已被删除</string>
    <string name="at">帐号已被禁用</string>
    <string name="au">参与过的话题</string>
    <string name="av">已取消提醒</string>
    <string name="aw">活动已结束</string>
    <string name="ax">%d人正在讨论</string>
    <string name="ay">话题进行中</string>
    <string name="az">为你推荐</string>
    <string name="b0">已设提醒</string>
    <string name="b1">设置提醒</string>
    <string name="b2">交流会前15分钟将收到私信提醒</string>
    <string name="b3">推广</string>
    <string name="b4">img立即咨询</string>
    <string name="b5">不感兴趣</string>
    <string name="b6">立即下载</string>
    <string name="b7">正在下载...</string>
    <string name="b8">立即安装</string>
    <string name="b9">立即打开</string>
    <string name="b_">立即咨询</string>
    <string name="ba">了解更多</string>
    <string name="bb">添加背景音乐</string>
    <string name="bc">添加背景音乐</string>
    <string name="bd">添加背景音乐</string>
    <string name="be">添加不成功?部分机型需要在手机系统设置里打开相应权限</string>
    <string name="bf">由于黑名单设置，该用户无法关注</string>
    <string name="bg">关注数已达上限</string>
    <string name="bh">添加关注成功</string>
    <string name="bi">"加载失败
点击重试"</string>
    <string name="bj">加载失败，请重新添加</string>
    <string name="bk">歌曲已存在</string>
    <string name="bl">因版权方要求，您所在的地区暂时无法收藏。</string>
    <string name="bm">歌单不存在，请稍后再试</string>
    <string name="bn">歌单歌曲数量已达上限，无法添加新歌曲，请整理后再试。</string>
    <string name="bo">已收藏到歌单</string>
    <string name="bp">"已收藏到歌单
将转存到我的音乐云盘"</string>
    <string name="bq">给动态配上音乐</string>
    <string name="br">有音乐，更生动</string>
    <string name="bs">添加图片</string>
    <string name="bt">正在播放电台节目，无法添加到播放列表</string>
    <string name="bu">正在播放私人FM，无法添加到播放列表</string>
    <string name="bv">添加成功</string>
    <string name="bw">加入黑名单</string>
    <string name="bx">添加到桌面</string>
    <string name="by">加入歌单</string>
    <string name="bz">收藏到歌单</string>
    <string name="c0">已加入升级队列</string>
    <string name="c1">添加</string>
    <string name="c2">调整歌曲顺序</string>
    <string name="c3">营销广告</string>
    <string name="c4">年龄：%s</string>
    <string name="c5">同意</string>
    <string name="c6">同意以下协议 《网易云音乐服务条款》</string>
    <string name="c7">后天</string>
    <string name="c8">上次设置的铃声文件不存在</string>
    <string name="c9">选择铃声</string>
    <string name="c_">天</string>
    <string name="ca">五</string>
    <string name="cb">闹钟已经停止</string>
    <string name="cc">"闹钟已经停止
不再提醒"</string>
    <string name="cd">小时</string>
    <string name="ce">分钟</string>
    <string name="cf">一</string>
    <string name="cg">试听失败</string>
    <string name="ch">为了使闹钟正常提醒，请不要退出云音乐</string>
    <string name="ci">小秘书早安铃声</string>
    <string name="cj">正在下载铃声，此时退出会取消下载，确定退出吗？</string>
    <string name="ck">六</string>
    <string name="cl">日</string>
    <string name="cm">四</string>
    <string name="cn">闹钟将于%s后提醒</string>
    <string name="co">5分钟后提醒</string>
    <string name="cp">5分钟后提醒</string>
    <string name="cq">明天</string>
    <string name="cr">试用结束</string>
    <string name="cs">二</string>
    <string name="ct">上滑停止闹钟</string>
    <string name="cu">正在使用</string>
    <string name="cv">三</string>
    <string name="cw">闹钟将于不到一分钟后提醒</string>
    <string name="cx">铃声</string>
    <string name="cy">随机选择</string>
    <string name="cz">随机播放本地音乐</string>
    <string name="d0">立即下载</string>
    <string name="d1">专辑</string>
    <string name="d2">歌手：</string>
    <string name="d3">无法找到该专辑信息</string>
    <string name="d4">专辑数已达到上限，无法收藏</string>
    <string name="d5">发行公司：%s</string>
    <string name="d6">包含单曲：</string>
    <string name="d7">专辑: %d</string>
    <string name="d8">专辑</string>
    <string name="d9">Disc %s</string>
    <string name="d_">版权方要求，你收藏的专辑%1$s已合并到%2$s。</string>
    <string name="da">版权方要求，你收藏的专辑%1$s等%2$d张专辑已合并到%3$s等%4$d张专辑。</string>
    <string name="db">歌曲%d</string>
    <string name="dc">专辑：%s</string>
    <string name="dd">专辑:</string>
    <string name="de">《%s》</string>
    <string name="df">不再收藏</string>
    <string name="dg">价格:</string>
    <string name="dh">发行时间: %s</string>
    <string name="di">数量:</string>
    <string name="dk">专辑已收藏</string>
    <string name="dl">专辑类别：%s</string>
    <string name="dm">操作失败</string>
    <string name="dn">http://%1$s/album/%2$d/?userid=%3$d</string>
    <string name="do">支付宝</string>
    <string name="dp">支付宝支付</string>
    <string name="dq">备注名不能包含特殊字符</string>
    <string name="dr">备注名超出长度限制</string>
    <string name="ds">设置失败</string>
    <string name="dt">全部%s</string>
    <string name="du">全部（共%d个）</string>
    <string name="dv">全部专栏</string>
    <string name="dw">全部%s条评论</string>
    <string name="dx">全部演出信息</string>
    <string name="dy">所有联系人</string>
    <string name="dz">全部下载失败</string>
    <string name="e0">全部下载成功</string>
    <string name="e1">全部热销专辑</string>
    <string name="e2">全部暂停</string>
    <string name="e3">全部精品电台</string>
    <string name="e4">所有人</string>
    <string name="e5">全部照片</string>
    <string name="e6">所选的节目都已经下载了</string>
    <string name="e7">全部开始</string>
    <string name="e8">所有标签</string>
    <string name="e9">全部视频</string>
    <string name="e_">透明度</string>
    <string name="ea">已加入黑名单，你将不再收到对方的任何消息</string>
    <string name="eb">@string/vw</string>
    <string name="ec">已添加到下一首播放</string>
    <string name="ed">已加入上传队列</string>
    <string name="ee">已添加到播放列表</string>
    <string name="ef">已取消收藏</string>
    <string name="eg">已收藏到我的音乐，音乐已下载</string>
    <string name="eh">已删除</string>
    <string name="ei">，已下载</string>
    <string name="ej">已在黑名单中</string>
    <string name="ek">已赞过此资源</string>
    <string name="el">已解除黑名单</string>
    <string name="em">你已经举报过该内容了哦</string>
    <string name="en">你已经举报过该用户了哦</string>
    <string name="eo">已选择%d项</string>
    <string name="ep">已售%1$s张</string>
    <string name="eq">已售%1$s首</string>
    <string name="er">及时收到我的新歌动态 已收藏</string>
    <string name="es">已取消订阅</string>
    <string name="et">同时删除下载文件</string>
    <string name="eu">同时删除下载文件（重新下载需要再次扣除相应积分）</string>
    <string name="ev">你已创建%d个歌单</string>
    <string name="ew">登录后，歌单永久保存，多端同步</string>
    <string name="ex">"登录网易云音乐 
320K高音质无限下载，手机电脑多端同步"</string>
    <string name="ey">立即登录</string>
    <string name="ez">登录后可查看全部附近的人：</string>
    <string name="f0">走到哪里，都能发现附近的好音乐</string>
    <string name="f1">登录后，收藏歌曲永久保存，多端同步</string>
    <string name="f2">你已收藏%d首音乐</string>
    <string name="f3">匿名收藏歌曲数已满，请先登录</string>
    <string name="f4">歌曲来自其他用户的音乐云盘，登录后才可收藏</string>
    <string name="f5">¥%.2f</string>
    <string name="f6">当前版本</string>
    <string name="f7">网易云音乐</string>
    <string name="f8">新版更新</string>
    <string name="f9">cloudMusic</string>
    <string name="f_">即将开始下载</string>
    <string name="fa">正在下载：%1$s</string>
    <string name="fb">申请做主播</string>
    <string name="fc">申请电台失败了</string>
    <string name="fd">申请电台成功</string>
    <string name="fe">你将用此帐号申请做主播</string>
    <string name="ff">歌词模版加载失败</string>
    <string name="fg">AR</string>
    <string name="fh">内容加载中，请勿将手机移开扫描物</string>
    <string name="fi">"正在准备%1$s，请稍后...
正在加载%2$d%%"</string>
    <string name="fj">对准AR标识图正面，注意近距离对焦哦</string>
    <string name="fk">网易云音乐AR分享</string>
    <string name="fl">参数错误</string>
    <string name="fm">选取云音乐中热度最高的100名歌手，每天更新。热度由收藏歌手、歌手歌曲的播放、收藏、分享数量和歌手话题活跃情况综合计算。</string>
    <string name="fn">歌手</string>
    <string name="fo">歌手已收藏</string>
    <string name="fp">已入驻</string>
    <string name="fq">无法找到该歌手信息</string>
    <string name="hd">自动下载最新安装包</string>
    <string name="hf">仅Wi-Fi网络</string>
    <string name="i9">下载</string>
    <string name="n0">云音乐锁屏</string>
    <string name="os">谁可以看到我的购票信息</string>
    <string name="p7">2G/3G/4G网络下不耗流量</string>
    <string name="p8">连接DLNA设备</string>
    <string name="r4">删除</string>
    <string name="sw">用Wi-Fi将音乐传输到支持DLNA的设备播放</string>
    <string name="ug">下载</string>
    <string name="uz">下载音质</string>
    <string name="xe">桌面歌词</string>
    <string name="xf">锁定桌面歌词</string>
    <string name="z1">朋友圈</string>
    <string name="a1w">谁可以看到我的听歌排行</string>
    <string name="a87">锁屏显示</string>
    <string name="a96">显示歌词翻译</string>
    <string name="a97">外文歌词有翻译时，显示中文翻译</string>
    <string name="a_4">下一首播放</string>
    <string name="a__">评论</string>
    <string name="aa0">分享</string>
    <string name="aa5">升级音质</string>
    <string name="abs">多选</string>
    <string name="afg">新版本</string>
    <string name="aig">通知栏样式</string>
    <string name="alc">关于网易云音乐</string>
    <string name="alg">鲸云音效</string>
    <string name="alk">视频页中Wi-Fi下连续播放</string>
    <string name="alm">视频后台播放</string>
    <string name="alo">缓存设置</string>
    <string name="alp">仅Wi-Fi下联网</string>
    <string name="alq">开发者选项</string>
    <string name="als">使用2G/3G/4G网络下载</string>
    <string name="alt">边听边存</string>
    <string name="alz">帮助与反馈</string>
    <string name="am2">切换帐号</string>
    <string name="am4">消息和隐私设置</string>
    <string name="am6">使用2G/3G/4G网络播放</string>
    <string name="am7">动态页中Wi-Fi下自动播放视频</string>
    <string name="am9">设置下载目录</string>
    <string name="am_">帐号和绑定设置</string>
    <string name="ama">视频解码模式</string>
    <string name="ao6">在线播放音质</string>
    <string name="aqq">隐私</string>
    <string name="atj">QQ空间</string>
    <string name="auz">QQ</string>
    <string name="b2o">关于</string>
    <string name="b2p">帐号和隐私</string>
    <string name="b2s">音乐硬件</string>
    <string name="b2t">网络</string>
    <string name="b2u">播放和下载</string>
    <string name="b2w">工具</string>
    <string name="b2x">桌面小部件</string>
    <string name="b7a">跑步FM离线包</string>
    <string name="b7d">连接Wi-Fi，自动缓存跑步歌曲</string>
    <string name="b91">未开启</string>
    <string name="b93">已开启</string>
    <string name="bdt">车载蓝牙播放器</string>
    <string name="bgn">谁可以看到我的微博帐号</string>
    <string name="bgo">谁可以看到我的评论</string>
    <string name="bgp">谁可以看到我的个人信息</string>
    <string name="bgq">年龄、地区、大学</string>
    <string name="bhc">微信好友</string>
</resources>