<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.netease.cloudmusic.ui.SettingItemView android:id="@id/su" android:layout_width="fill_parent" android:layout_height="@dimen/li" app:leftText="@string/bgp" app:leftSubText="@string/bgq" />
    <com.netease.cloudmusic.ui.SettingItemView android:id="@id/sv" android:layout_width="fill_parent" android:layout_height="@dimen/li" app:leftText="@string/bgn" />
    <com.netease.cloudmusic.ui.SettingItemView android:id="@id/sw" android:layout_width="fill_parent" android:layout_height="@dimen/li" app:leftText="@string/a1w" />
    <com.netease.cloudmusic.ui.SettingItemView android:id="@id/sx" android:layout_width="fill_parent" android:layout_height="@dimen/li" app:leftText="@string/bgo" />
    <com.netease.cloudmusic.ui.SettingItemView android:id="@id/sy" android:layout_width="fill_parent" android:layout_height="@dimen/li" app:bgType="d0" app:leftText="@string/os" />
</LinearLayout>