<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ady" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/al4" android:visibility="gone" style="@style/plActionAreaContainer">
        <ImageView android:id="@id/al5" style="@style/plActionAreatImageView" />
        <TextView android:id="@id/al6" android:text="@string/aqq" style="@style/plActionAreaText" />
    </LinearLayout>
    <LinearLayout android:id="@id/al7" style="@style/plActionAreaContainer">
        <ImageView android:id="@id/r1" style="@style/plActionAreatImageView" />
        <TextView android:id="@id/al8" android:text="@string/a__" style="@style/plActionAreaText" />
    </LinearLayout>
    <LinearLayout android:id="@id/al9" style="@style/plActionAreaContainer">
        <ImageView android:id="@id/ri" style="@style/plActionAreatImageView" />
        <TextView android:id="@id/al_" android:text="@string/aa0" style="@style/plActionAreaText" />
    </LinearLayout>
    <LinearLayout android:id="@id/ala" style="@style/plActionAreaContainer">
        <ImageView android:id="@id/s0" style="@style/plActionAreatImageView" />
        <TextView android:id="@id/alb" android:text="@string/ug" style="@style/plActionAreaText" />
    </LinearLayout>
    <LinearLayout android:id="@id/alc" style="@style/plActionAreaContainer">
        <ImageView android:id="@id/fn" style="@style/plActionAreatImageView" />
        <TextView android:id="@id/ald" android:text="@string/abs" style="@style/plActionAreaText" />
    </LinearLayout>
</LinearLayout>